fixed spacing between title and search bar

--- a/packages/module/src/ChatbotConversationHistoryNav/ChatbotConversationHistoryNav.scss
+++ b/packages/module/src/ChatbotConversationHistoryNav/ChatbotConversationHistoryNav.scss
@@ -9,7 +9,6 @@
   // Drawer input
   // ----------------------------------------------------------------------------
   .pf-chatbot__input {
-    padding-inline-start: var(--pf-t--global--spacer--lg);
     padding-inline-end: var(--pf-t--global--spacer--lg);
   }
 
